gh-174 callout: fix spacing of inner paragraph

--- a/css/_sass/_component-callout.scss
+++ b/css/_sass/_component-callout.scss
@@ -9,4 +9,7 @@
   a {
     color: $color-black;
   }
+  p:last-child {
+    margin-bottom: 0;
+  }
 }
